# python-singerlake

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: pre-comit.yml  tests.yml
singerlake/: __init__.py  config.py  models.py  singerlake.py  store.py
singerlake/discovery/: discovery_service.py
singerlake/manifest/: __init__.py  manifest_service.py  models.py
singerlake/store/: __init__.py  base.py  local.py  store_service.py
singerlake/store/locker/: base.py
singerlake/store/locking/: base.py
singerlake/store/path_manager/: __init__.py  base.py  local.py  paths_service.py
singerlake/store/paths/: base.py
singerlake/stream/: stream.py
singerlake/tap/: tap.py
src/singerlake/: __init__.py  config.py  singerlake.py
src/singerlake/discovery/: __init__.py  discovery_service.py
src/singerlake/manifest/: __init__.py  manifest_service.py  models.py
src/singerlake/singer/: utils.py
src/singerlake/store/: __init__.py  base.py  local.py  manifest.py  store_service.py
src/singerlake/store/locker/: README.md  __init__.py  base.py  lock_service.py
src/singerlake/store/path_manager/: __init__.py  base.py  constant.py  hive.py  (+1 more)
src/singerlake/stream/: file_writer.py  record_writer.py  stream.py
src/singerlake/tap/: __init__.py  tap.py
tests/: conftest.py  test_local_singerlake.py  test_local_store.py  test_singerlake.py  utils.py
tests/data/test_inputs/: entry.jsonl  generationmix.jsonl  region.jsonl
tests/data/write_lake/: manifest.json
tests/example_files/: entry.schema.json  generationmix.schema.json  region.schema.json
(+6 files in other folders)
