[tool.poetry]
name = "python-singerlake"
version = "0.1.0"
description = ""
authors = ["Ken Payne <ken@meltano.com>"]
readme = "README.md"
packages = [{include = "singerlake"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"


[tool.poetry.group.local.dependencies]
filelock = "^3.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
